responsive: counter, article, sponsors,footer

--- a/index.html
+++ b/index.html
@@ -77,27 +77,92 @@
    <main>
 
       <section class="showcase">
-         <div class="container">
 
+         <div class="showcase-img">
+            <img src="assets/img/showcase-img-60.jpg">
          </div>
+
+         <div class="showcaseWrapper">
+
+            <div class="leadText">
+               <div class="container">
+                  <h1>Next Big</h1>
+                  <h3>Join us for a two day
+                     conference/spa retreat
+                     for developers and
+                     designers that care
+                     about their craft.
+                  </h3>
+               </div>
+            </div>
+
+            <div class="event">
+
+               <div class="container">
+                  <div class="network-showcase-img">
+                        <img src="assets/img/showcase-img-network_03.png">
+                  </div>
+                  <h2>
+                     <span class="event-date">18</span>
+                     <span class="event-month">June</span>
+                     <span class="event-hours">10:00 am - 20:00 pm</span>
+                  </h2>
+
+               </div>
+            </div>
+
+         </div> <!-- end.showcaseWrapper -->
+
+
       </section> <!-- end sectio.showcase -->
-
-      <section class="leadText">
+      <section class="eventText">
          <div class="container">
-
+            <p>
+                  Lorem ipsum dolor sit amet, wisi mi viverra, hendrerit fusce erat molestie turpis morbi sem, nec eu, sem risus consectetuer. In est elit
+                  molestie sed, proin et inceptos ipsum aenean, dui in maecenas, quisque varius turpis velit arcu. Sit malesuada ornare, commodo
+                  pellentesque ut, cursus eleifend. Mauris diam aliquet non lacus, eget nibh pharetra vestibulum tincidunt ante. Massa rutrum. Orci quis
+                  tempor sollicitudin, vestibulum nisl, aliquet eu pharetra sit sapien et pretium, justo luctus non. Venenatis cursus laoreet dui, sint sed
+                  viverra, scelerisque convallis et, in egestas tempus iaculis euismod in. Mauris adipiscing vitae ullamcorper varius ut massa. Nibh
+                  quisque ultricies quam erat, velit per ante porta, fusce enim magna. Non dignissim morbi, consectetuer ut, venenatis mollis
+                  pellentesque arcu, ante a. Ut amet integer justo, sed integer lorem vestibulum interdum pulvinar sed. Felis mattis id class, velit
+                  vestibulum mi vivamus et, erat in, ante enim ipsum ultrices nec a.
+            </p>
          </div>
       </section> <!-- end section.leadText -->
 
       <section class="counter">
-         <div class="container">
+         <div class="container-fluid">
+            <div class="row">
 
-         </div>
+                  <div class="col-md-6">
+                     <img class="counter-img" src="assets/img/chain.jpg">
+                  </div>
+                  <div class="col-md-6">
+                     <div class="counter-text">
+                        <h5>What are you waiting for?</h5>
+
+                        <div id="clock-wrapper">
+                           <div>
+                              <span class="days"></span>
+                              <div class="smalltext">Days</div>
+                           </div>
+                           <div>
+                              <span class="hours"></span>
+                              <div class="smalltext">Hours</div>
+                           </div>
+                           <div>
+                              <span class="minutes"></span>
+                              <div class="smalltext">Minutes</div>
+                           </div>
+                        </div>
+
+                        <button type="button" class="btn btn-primary">Register</button>
+                     </div> <!-- end.counter-text -->
+                  </div>
+
+            </div> <!-- end.row -->
+         </div> <!-- end.container-fluid -->
       </section> <!-- end section.counter -->
-      <section>
-         <div class="container">
-
-         </div>
-      </section>
 
       <section class="dontMiss">
          <div class="container">
@@ -107,13 +172,34 @@
 
       <section class="article">
          <div class="container">
+            <div class="row">
 
+               <div class="col-md-4">
+                  <div class="article-img-wrapper"> <img class="article-img" src="assets/img/article-img.jpg" ></div>
+                  <img class="article-img-bg" src="assets/img/article-img-bg.png">
+               </div>
+               <div class="col-md-7 article-text-wrapper">
+                  <h3>Montes porttitor morbi ad integer hendrerit, erat libero sapien</h3>
+                  <p>
+                     Lorem ipsum dolor sit amet, wisi mi viverra, hendrerit fusce erat molestie turpis morbi sem, nec eu, sem risus consectetuer. In est elit molestie sed, proin et inceptos ipsum aenean, dui in maecenas, quisque varius turpis velit arcu. Sit malesuada ornare, commodo pellentesque ut, cursus eleifend. Mauris diam aliquet non lacus, eget nibh pharetra vestibulum tincidunt ante. Massa rutrum.
+                  </p>
+                  <button type="button" class="btn btn-link article-btn">See more in our blog -></button>
+               </div>
+
+            </div>
          </div>
       </section> <!-- end section.article -->
 
       <section class="sponsors">
          <div class="container">
-
+            <h3>Sponsors</h3>
+            <ul class="sponsors-wrapper">
+               <li> <a href="#"> <img src="assets/img/partner-01.jpg" alt=""> </a> </li>
+               <li> <a href="#"> <img src="assets/img/partner-02.jpg" alt=""> </a> </li>
+               <li> <a href="#"> <img src="assets/img/partner-03.jpg" alt=""> </a> </li>
+               <li> <a href="#"> <img src="assets/img/partner-04.jpg" alt=""> </a> </li>
+               <li> <a href="#"> <img src="assets/img/partner-05.jpg" alt=""> </a> </li>
+            </ul>
          </div>
       </section> <!-- end section.sponsors -->
 
@@ -122,7 +208,65 @@
 
    <footer>
       <div class="container">
+            <div class="footer-wrapper">
+               <div class="copyright">Next Big &copy; 2017</div>
+               <div class="footer-menu">
+                  <ul class="footer-menu-wrapper">
+                     <li>
+                        <a href="#">home</a>
+                     </li>
+                     <li>
+                        <a href="#">about</a>
+                     </li>
+                     <li>
+                        <a href="#">schedule</a>
+                     </li>
+                     <li>
+                        <a href="#">Speakers</a>
+                     </li>
+                     <li>
+                        <a href="#">blog</a>
+                     </li>
+                     <li>
+                        <a href="#">contacts</a>
+                     </li>
+                     <li>
+                        <a href="#">Register</a>
+                     </li>
+                  </ul>
+               </div>
+               <div class="social-wrapper">
+                  <ul class="navbar-nav social">
+                        <li class="nav-item active">
+                        <a class="nav-link social-link" href="#" target="_blank">
+                           <svg class="social-icon"  viewBox="0 0 64 64" >
+                              <path class="iconHover" d="m62.189,26.553h-4.323v-4.321c0-0.943-0.764-1.708-1.709-1.708-0.943,0-1.707,0.765-1.707,1.708v4.321h-4.32c-0.944,0-1.708,0.766-1.708,1.709s0.764,1.708 1.708,1.708h4.32v4.321c0,0.944 0.764,1.709 1.707,1.709 0.945,0 1.709-0.765 1.709-1.709v-4.321h4.323c0.944,0 1.708-0.765 1.708-1.708s-0.763-1.709-1.708-1.709z" fill="#fbfb00"/>
+                              <path class="iconHover" d="m43.499,26.553c-6.467,0.009-12.929,0.016-19.398-0.005-0.003,0-0.007,0-0.011,0-0.719,0-1.302,0.217-1.731,0.649-0.647,0.648-0.642,1.472-0.64,1.783 0.017,1.691 0.013,3.38 0.011,5.075l-.002,2.04c0,1.74 0.802,2.554 2.527,2.554l2.551,.001c2.051,0 4.106,0.003 6.171-0.005-0.019,0.037-0.038,0.077-0.057,0.116-0.583,1.22-1.5,2.303-2.8,3.308-1.636,0.987-3.275,1.556-5.011,1.735-3.979,0.402-7.216-0.828-9.899-3.79-0.908-1.004-1.646-2.279-2.279-3.87-0.78-2.606-0.767-5.039 0.021-7.388 0.698-1.921 1.729-3.495 3.151-4.816 4.114-3.83 10.436-3.988 14.392-0.364 0.787,0.721 2.046,0.96 3.103-0.167l1.323-1.324c1.357-1.362 2.712-2.72 4.093-4.072 0.528-0.522 0.782-1.105 0.759-1.735-0.037-0.944-0.698-1.503-0.903-1.677-5.49-4.727-11.965-6.532-19.272-5.37-5.053,0.807-9.475,3.17-13.141,7.017-1.604,1.676-2.823,3.386-3.718,5.205-0.224,0.423-0.494,0.952-0.561,1.093-1.896,4.099-2.558,8.47-1.973,12.988 0.353,2.747 1.141,5.266 2.298,7.417 1.473,3.062 3.582,5.69 6.268,7.812 4.417,3.487 9.336,5.237 14.687,5.237 2.194,0 4.461-0.294 6.795-0.884 3.429-0.868 6.439-2.515 8.874-4.828 1.418-1.209 2.642-2.69 3.736-4.534 2.976-5.018 3.969-10.648 3.034-17.213-0.062-0.467-0.428-1.988-2.398-1.988zm-3.704,17.381c-0.892,1.498-1.866,2.688-3.053,3.701-2.057,1.953-4.534,3.307-7.363,4.021-6.994,1.769-13.007,0.559-18.397-3.694-2.258-1.781-4.027-3.986-5.299-6.63-1.002-1.863-1.636-3.908-1.937-6.255-0.498-3.844 0.064-7.557 1.67-11.031 0.029-0.059 0.086-0.175 0.159-0.319 0.067-0.095 0.129-0.196 0.177-0.305 0.061-0.129 0.121-0.258 0.183-0.387 0.104-0.195 0.189-0.358 0.226-0.426 0.024-0.045 0.049-0.093 0.068-0.14 0.705-1.287 1.63-2.524 2.808-3.759 3.117-3.271 6.861-5.275 11.123-5.957 5.83-0.934 10.854,0.273 15.342,3.709-1.039,1.029-2.074,2.066-3.107,3.102l-.524,.526c-5.331-3.977-13.072-3.533-18.196,1.237-1.816,1.689-3.188,3.776-4.09,6.248-1.031,3.073-1.054,6.301-0.021,9.732 0.842,2.146 1.796,3.765 3.002,5.1 3.456,3.815 7.815,5.476 12.913,4.944 2.271-0.234 4.487-1.006 6.584-2.289 0.052-0.03 0.102-0.065 0.15-0.103 1.8-1.372 3.082-2.896 3.926-4.657 0.374-0.78 0.619-1.555 0.839-2.285 0.094-0.312 0.377-1.255-0.263-2.106-0.429-0.572-1.052-0.812-1.952-0.847-2.65,0.021-5.303,0.018-7.953,0.018l-1.513-.002v-1.02c0.003-1.308 0.005-2.617 0-3.941 5.72,0.014 11.446,0.01 17.205,0.003 0.564,5.268-0.322,9.794-2.707,13.812z" fill="#fbfb00"/>
+                           </svg>
+                        </a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link social-link" href="#" target="_blank">
+                           <svg class="social-icon" version="1.1"  x="0px" y="0px" viewBox="0 0 288.861 288.861">
+                              <path class="iconHover" d="M167.172,288.861h-62.16V159.347H70.769v-59.48h34.242v-33.4C105.011,35.804,124.195,0,178.284,0   c19.068,0,33.066,1.787,33.651,1.864l5.739,0.746l-1.382,55.663l-6.324-0.058c-0.013,0-14.223-0.135-29.724-0.135   c-11.536,0-13.066,2.847-13.066,14.171v27.629h50.913l-2.821,59.48h-48.086v129.501H167.172z M117.858,276.007h36.453V146.5h48.677   l1.607-33.779h-50.284V72.238c0-13.368,3.078-27.025,25.919-27.025c9.178,0,17.899,0.045,23.509,0.09l0.778-31.292   c-5.675-0.508-15.116-1.157-26.247-1.157c-44.544,0-60.419,27.693-60.419,53.613v46.254H83.61V146.5h34.242v129.507H117.858z" fill="#fbfb00"/>
+                           </svg>
+                        </a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link social-link" href="#" target="_blank">
+                           <svg class="social-icon" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 511.271 511.271" >
+                              <path class="iconHover" d="M508.342,94.243c-2.603-2.603-6.942-3.471-10.414-2.603l-17.356,6.075c10.414-12.149,17.356-25.166,21.695-37.315    c1.736-4.339,0.868-7.81-1.736-10.414c-2.603-2.603-6.942-3.471-10.414-1.736c-24.298,10.414-45.125,19.092-62.481,24.298    c0,0.868-0.868,0-1.736,0c-13.885-7.81-47.729-25.166-72.027-25.166c-61.614,0.868-111.078,52.936-111.078,116.285v3.471    c-90.251-17.356-139.715-43.39-193.519-99.797L40.6,58.663l-5.207,10.414c-29.505,56.407-8.678,107.607,25.166,142.319    c-15.62-2.603-26.034-7.81-35.58-15.62c-3.471-2.603-7.81-3.471-12.149-0.868c-3.471,1.736-5.207,6.942-4.339,11.281    c12.149,40.786,42.522,73.763,75.498,93.722c-15.62,0-28.637-1.736-41.654-10.414c-3.471-1.736-8.678-1.736-12.149,0.868    s-5.207,6.942-3.471,11.281c15.62,44.258,45.993,67.688,94.59,73.763c-25.166,14.753-58.142,26.902-109.342,27.77    c-5.207,0-9.546,3.471-11.281,7.81c-1.736,5.207,0,9.546,3.471,13.017c31.241,25.166,100.664,39.919,186.576,39.919    c152.732,0,277.695-136.244,277.695-303.729v-2.603c19.092-9.546,34.712-27.77,42.522-52.936    C511.813,101.185,510.945,96.846,508.342,94.243z M456.274,143.707l-5.207,1.736v14.753    c0,157.939-117.153,286.373-260.339,286.373c-78.97,0-131.905-13.017-160.542-26.902c59.878-4.339,94.59-23.431,121.492-44.258    l21.695-15.62h-26.034c-49.464,0-79.837-13.885-97.193-46.861c15.62,5.207,32.108,5.207,50.332,4.339    c6.942-0.868,13.885-0.868,20.827-0.868l2.603-17.356c-32.976-9.546-72.027-39.051-91.119-78.969    c17.356,7.81,36.447,9.546,53.803,9.546h26.902L91.8,213.999c-18.224-13.017-72.027-59.01-45.993-124.963    c55.539,54.671,108.475,79.837,203.932,97.193l10.414,1.736v-24.298c0-53.803,41.654-98.061,93.722-98.929    c19.959-0.868,52.936,17.356,62.481,22.563c5.207,2.603,10.414,3.471,15.62,1.736c13.017-4.339,28.637-10.414,45.993-17.356    c-7.81,13.017-18.224,25.166-32.108,36.448c-3.471,2.603-4.339,7.81-2.603,12.149c1.736,4.339,6.942,6.075,11.281,4.339    l33.844-11.281C482.308,124.616,472.762,137.633,456.274,143.707z" fill="#fbfb00"/>
+                           </svg>
+                        </a>
+                        </li>
+                  </ul> <!-- end.social -->
+               </div>
 
+               <div class="powered-by">
+                  <p>Powered by</p>
+                  <a href="#"><i class="powered-by-logo"></i></a>
+               </div>
+            </div>
       </div>
    </footer>
    <!-- end footer -->
